--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-agile": "^1.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
